# interview-assignment

./: .gitignore  .gitingore  README.md  report_template.tex
firmware/: Cargo.toml  README.md  Ravedude.toml
firmware/src/: main.rs
hardware/CurrentSensorUSB/: CurrentSensorUSB.csv  CurrentSensorUSB.kicad_pcb  CurrentSensorUSB.kicad_prl  CurrentSensorUSB.kicad_pro  CurrentSensorUSB.kicad_sch  README.md
hardware/CurrentSensorUSB_prototype/: CurrentSensorUSB_prototype.kicad_prl  CurrentSensorUSB_prototype.kicad_pro  CurrentSensorUSB_prototype.kicad_sch
software/: README.md  acquire_sonsor_data.py  data_acquirer.py  emulator.py  plot_data.py  pyproject.toml  report.py
software/data/: data_20250518_223138.csv  report_20250518_223138.tex
software/lib/: emulator.py  plotter.py  report.py  report_template.tex
