[package]
name = "firmware"
version = "0.1.0"
authors = ["vlust <viktor.lust@curemannheim.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "firmware"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"
ads1x1x = "0.3.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "fafaf587a32a4500239fd073f89d1b9c36b48092"
features = ["arduino-nano"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
